--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,80 @@
+saccelerate==1.9.0
+acres==0.5.0
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.1.0
+certifi==2025.8.3
+charset-normalizer==3.4.2
+ci-info==0.3.0
+click==8.1.8
+configobj==5.0.9
+configparser==7.2.0
+etelemetry==0.3.1
+filelock==3.18.0
+fsspec==2025.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+hf-xet==1.1.7
+httplib2==0.22.0
+huggingface-hub==0.34.3
+idna==3.10
+importlib_resources==6.5.2
+isodate==0.7.2
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+looseversion==1.3.0
+lxml==6.0.0
+MarkupSafe==3.0.2
+mpmath==1.3.0
+narwhals==2.0.1
+networkx==3.2.1
+nibabel==5.3.2
+nipype==1.10.0
+numpy==2.0.2
+packaging==25.0
+pandas==2.3.1
+pathlib==1.0.1
+pillow==11.3.0
+protobuf==6.31.1
+prov==2.1.1
+psutil==7.0.0
+puremagic==1.30
+pyarrow==21.0.0
+pydeck==0.9.1
+pydot==4.0.1
+PyMuPDF==1.26.3
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyxnat==1.6.3
+PyYAML==6.0.2
+rdflib==7.1.4
+referencing==0.36.2
+regex==2025.7.34
+requests==2.32.4
+rpds-py==0.26.0
+safetensors==0.6.1
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==5.1.0
+simplejson==3.20.1
+six==1.17.0
+smmap==5.0.2
 streamlit==1.48.0
-PyMuPDF            # gives you `fitz`
-numpy
-pandas
-scikit-learn
-sentence-transformers
-transformers
-torch              # CPU wheel; fine on Streamlit Cloud
-sentencepiece      # needed by T5 tokenizer
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+toml==0.10.2
+torch==2.8.0
+tornado==6.5.1
+tqdm==4.67.1
+traits==7.0.2
+transformers==4.55.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+zipp==3.23.0
